--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - redis
   sidekiq:
     build: .
+    entrypoint: ["/app/bin/docker-entrypoint"]
     command: bundle exec sidekiq
     volumes:
       - ".:/app"
