--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     env_file: .env
     volumes:
       - db_data:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
   redis:
     image: redis:7
   backend:
