--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     command: bundle exec rails s -b 0.0.0.0
     volumes:
       - ".:/app"
+      - bundle_cache:/usr/local/bundle
     env_file: .env
     ports:
       - "3000:3000"
@@ -26,9 +27,11 @@ services:
     command: bundle exec sidekiq
     volumes:
       - ".:/app"
+      - bundle_cache:/usr/local/bundle
     env_file: .env
     depends_on:
       - backend
       - redis
 volumes:
   db_data:
+  bundle_cache:
